# Livox-SDK2

./: package.xml
sdk_core/: CMakeLists.txt  device_manager.cpp
sdk_core/base/network/unix/: network_util.cpp
sdk_core/command_handler/: general_command_handler.cpp
